--- a/doc.html
+++ b/doc.html
@@ -127,8 +127,8 @@
   </div>
 
   <hr>
-  <p><strong>Hinweis:</strong> Alle Daten werden temporär in Redis gespeichert. Änderungen sind nicht dauerhaft, wenn Redis neu gestartet wird.</p>
-  <p><strong>Technischer Hinweis:</strong> Bitte stelle sicher, dass dein Server über die Umgebungsvariable <code>REDIS_URL</code> mit einem Redis-Server verbunden ist.</p>
+  <p><strong>Hinweis:</strong> Alle Daten werden dauerhaft in einer Datenbank gespeichert.</p>
+  <a href="https://klickkrawall.netlify.app/">Zurück zu KlickKrawall</a>
 
 </body>
 </html>
