Füge Link zum GitHub-Repository in der API-Dokumentation hinzu

--- a/doc.html
+++ b/doc.html
@@ -149,6 +149,7 @@
   <hr>
   <p><strong>Hinweis:</strong> Alle Daten werden dauerhaft in einer Datenbank gespeichert.</p>
   <a href="https://klickkrawall.netlify.app/">Zurück zu KlickKrawall</a>
+  <a href="https://github.com/SaschaGepraegs/kk-frontend">Zum Repo</a>
 
 </body>
 </html>
