Aktualisierung der Dokumentation für den Endpunkt "/changeNaechstesSpiel": Änderung von "spielid=false" zu "spielid[]=false"

--- a/doc.html
+++ b/doc.html
@@ -408,7 +408,7 @@ oke
   </div>
   <div class="endpoint">
     <p><span class="method get">GET</span> <code>/changeNaechstesSpiel?lobby=123&spielid=5</code></p>
-    <p>Fügt ein Spiel zur Warteschlange hinzu. Mit <code>spielid=false</code> wird die Warteschlange geleert.</p>
+    <p>Fügt ein Spiel zur Warteschlange hinzu. Mit <code>spielid[]=false</code> wird die Warteschlange geleert.</p>
     <details>
       <summary>Beispieloutput</summary>
       <pre>
