--- a/doc.html
+++ b/doc.html
@@ -545,6 +545,16 @@ GER3181232405
       </pre>
     </details>
   </div>
+  <div class="endpoint">
+    <p><span class="method get">GET</span> <code>/totalPlayers</code></p>
+    <p>Gibt die Gesamtanzahl aller Spieler über alle Lobbys hinweg zurück.</p>
+    <details>
+      <summary>Beispieloutput</summary>
+      <pre>
+{"totalPlayers": 7}
+      </pre>
+    </details>
+  </div>
 
   <hr>
   <p><strong>Hinweis:</strong> Alle Daten werden dauerhaft in einer Datenbank gespeichert.</p>
